# AImeath

./: CMakeLists.txt  main.cpp  test_ws.js
frontend/app/chat/backend/: README.md
frontend/app/chat/frontend/: README.md  config.js
frontend/app/go/backend/: README.md
frontend/app/go/frontend/: README.md  config.js
frontend/app/gomoku/backend/: README.md
frontend/app/gomoku/backend/benchmark/: README.md
frontend/app/gomoku/backend/include/: README.md
frontend/app/gomoku/backend/src/: README.md
frontend/app/gomoku/backend/test/: README.md
frontend/app/gomoku/frontend/: README.md  config.js
frontend/app/pacman/backend/: README.md
frontend/app/pacman/backend/benchmark/: README.md
frontend/app/pacman/backend/include/: README.md
frontend/app/pacman/backend/src/: README.md
frontend/app/pacman/backend/test/: README.md
frontend/app/pacman/frontend/: README.md  config.js
frontend/app/snake/backend/: README.md
frontend/app/snake/backend/benchmark/: README.md
frontend/app/snake/backend/include/: README.md
frontend/app/snake/backend/src/: README.md
frontend/app/snake/backend/test/: README.md
frontend/app/snake/frontend/: README.md  config.js
frontend/src/config/: games.js
module/core/benchmark/: ws_server_bench.cpp
test/: run_all.sh
